--- a/Views/Itens/Details.cshtml
+++ b/Views/Itens/Details.cshtml
@@ -10,35 +10,38 @@
     <h4>Item</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Preco)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Preco)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Percentual)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Percentual)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Quantidade)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Quantidade)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NotaDeVenda)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NotaDeVenda.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.NotaDeVendaId)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Produto)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Produto.Descricao)
+        <dd class="col-sm-10">
+            @if (Model.Produto != null)
+            {
+                @Html.DisplayFor(model => model.Produto!.Nome)
+            }
         </dd>
     </dl>
 </div>
