--- a/Views/NotasDeVendas/Delete.cshtml
+++ b/Views/NotasDeVendas/Delete.cshtml
@@ -11,44 +11,53 @@
     <h4>NotaDeVenda</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Data)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Data)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Status)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Status)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Cliente.Nome)
+        <dd class="col-sm-10">
+            @if (Model.Cliente != null)
+            {
+                @Html.DisplayFor(model => model.Cliente!.Nome)
+            }
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Vendedor)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Vendedor.Nome)
+        <dd class="col-sm-10">
+            @if (Model.Vendedor != null)
+            {
+                @Html.DisplayFor(model => model.Vendedor!.Nome)
+            }
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Transportadora)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Transportadora.Nome)
+        <dd class="col-sm-10">
+            @if (Model.Transportadora != null)
+            {
+                @Html.DisplayFor(model => model.Transportadora!.Nome)
+            }
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TipoDePagamento)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TipoDePagamento.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TipoDePagamentoId)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
