--- a/Views/Pagamentos/Details.cshtml
+++ b/Views/Pagamentos/Details.cshtml
@@ -10,29 +10,29 @@
     <h4>Pagamento</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DataLimite)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DataLimite)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Valor)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Valor)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Pago)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Pago)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NotaDeVenda)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NotaDeVenda.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.NotaDeVendaId)
         </dd>
     </dl>
 </div>
