--- a/Views/Produtos/Create.cshtml
+++ b/Views/Produtos/Create.cshtml
@@ -49,6 +49,9 @@
                 }
             </div>
             <div class="form-group">
+                <a class="bnt bnt-primary" href="/Marcas/Create">Cadastrar Marca</a>
+            </div>
+            <div class="form-group">
 
                 @if (ViewBag.MarcaId != null)
                 {
