--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                                 asp-action="Index">Pagamentos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TiposDePagamento"
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TiposDePagamentos"
                                 asp-action="Index">Tipos de Pagamento</a>
                         </li>
                         <li class="nav-item">
