--- a/Views/Itens/Create.cshtml
+++ b/Views/Itens/Create.cshtml
@@ -14,26 +14,33 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Preco" class="control-label"></label>
-                <input asp-for="Preco" class="form-control" />
+                <input asp-for="Preco" class="form-control" id="Preco_item" value="@ViewBag.Preco"
+                    disabled="disabled" />
                 <span asp-validation-for="Preco" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Percentual" class="control-label"></label>
-                <input asp-for="Percentual" class="form-control" />
+                <input asp-for="Percentual" class="form-control" id="percentual" value="@ViewBag.Percentual" />
                 <span asp-validation-for="Percentual" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quantidade" class="control-label"></label>
-                <input asp-for="Quantidade" class="form-control" />
+                <input asp-for="Quantidade" class="form-control" id="Quant-item" value="@ViewBag.Quantidade" />
                 <span asp-validation-for="Quantidade" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NotaDeVendaId" class="control-label"></label>
-                <select asp-for="NotaDeVendaId" class ="form-control" asp-items="ViewBag.NotaDeVendaId"></select>
+                <select asp-for="NotaDeVendaId" class="form-control" asp-items="ViewBag.NotaDeVendaId"></select>
             </div>
-            <div class="form-group">
-                <label asp-for="ProdutoId" class="control-label"></label>
-                <select asp-for="ProdutoId" class ="form-control" asp-items="ViewBag.ProdutoId"></select>
+
+            <div class="row justify-content-center align-items-center">
+                <div class="form-group col-md-6 col-sm-12">
+                    <label asp-for="ProdutoId" class="control-label"></label>
+                    <select asp-for="ProdutoId" class="form-control" asp-items="ViewBag.ProdutoId"></select>
+                </div>
+                <div class="form-group col-md-6 col-sm-12">
+                    <a class="btn btn-primary" href="/Produtos/Create">Adicionar Produto</a>
+                </div>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -47,5 +54,30 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+
+    <script>
+
+        $("percentual").on("change", function () {
+            var preco = $("#Preco_item").val();
+            var percentual = $("#percentual").val();
+            var quant = $("#Quant-item").val();
+            var total = preco * quant;
+            var desconto = total * percentual / 100;
+            var totalComDesconto = total - desconto;
+            $("#Preco_item").val(totalComDesconto);
+        });
+
+        $("#Quant-item").on("change", function () {
+            var preco = $("#Preco_item").val();
+            var percentual = $("#percentual").val();
+            var quant = $("#Quant-item").val();
+            var total = preco * quant;
+            var desconto = total * percentual / 100;
+            var totalComDesconto = total - desconto;
+            $("#Preco_item").val(totalComDesconto);
+        });
+    </script>
 }
