--- a/Views/NotasDeVendas/Index.cshtml
+++ b/Views/NotasDeVendas/Index.cshtml
@@ -62,8 +62,10 @@
                     }
                 </td>
                 <td>
-
-                    @Html.DisplayFor(modelItem => item.TipoDePagamentoId)
+                    @if (item.TipoDePagamento != null)
+                    {
+                        @Html.DisplayFor(modelItem => item.TipoDePagamento.NomeDoCobrado)
+                    }
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
