--- a/Views/Pagamentos/Create.cshtml
+++ b/Views/Pagamentos/Create.cshtml
@@ -14,12 +14,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DataLimite" class="control-label"></label>
-                <input asp-for="DataLimite" class="form-control" />
+                <input asp-for="DataLimite" class="form-control" value="@DateTime.Now.ToString("yyyy-MM-dd")"
+                    min="@DateTime.Now.ToString("yyyy-MM-dd")" type="date" />
                 <span asp-validation-for="DataLimite" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Valor" class="control-label"></label>
-                <input asp-for="Valor" class="form-control" />
+                <input asp-for="Valor" class="form-control" min="0" max="999999999" type="number" />
                 <span asp-validation-for="Valor" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
@@ -29,7 +30,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="NotaDeVendaId" class="control-label"></label>
-                <select asp-for="NotaDeVendaId" class ="form-control" asp-items="ViewBag.NotaDeVendaId"></select>
+                <select asp-for="NotaDeVendaId" class="form-control" asp-items="ViewBag.NotaDeVendaId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -43,5 +44,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
